--- a/index.html
+++ b/index.html
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="content-container">
+            <div class="top-container">
+                <img class="logo" src="https://kajabi-app-assets.kajabi-cdn.com/assets/admin_login_logo-9fbbfb6dbdfa0c5aae38176b0023e0f9ae3c9974b6a7423d1abcb0d2d7dc03d1.png" alt="">
+                <h5>Sign In</h5>
+                <p>Need an account? <a href="#">Get started!</a></p>
+            </div>
+            <form>
+                <input type="email">
+                <input type="password">
+                <div class="check-ctr">
+                    <input type="checkbox" id="remember">
+                    <label for="remember">Remember Me</label>
+                </div>
+                <input type="submit" value="Sign In">
+            </form>
+            <div class="pw-forgot">
+                <a href="#">Forgot Password?</a>
+            </div>
+        </div>
+        <div class="image-container">
+        </div>
+    </div>
     
 </body>
 </html>
